# ray-tracer

./: Main.hs  README.md  image.ppm  ray-tracing-one-weekend.cabal  rays.cabal  rays.nix  shell.nix
app/: Camera.hs  Hittable.hs  Main.hs  PPM.hs  Ray.hs  Sphere.hs  Util.hs  Vec3.hs
src/: Camera.hs  Hittable.hs  Main.hs  Ray.hs  Sphere.hs  Types.hs
src/Rays/: Camera.hs  Hittable.hs  Material.hs  PPM.hs  Random.hs  Ray.hs  Sphere.hs  Types.hs  Util.hs
