cabal-version:      2.4
name:               rays
version:            0.1.0.0
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  default-language: Haskell2010
  ghc-options: -Wall -O2
  hs-source-dirs: src
  exposed-modules:
    Rays.Ray,
    Rays.Camera,
    Rays.PPM,
    Rays.Sphere,
    Rays.Hittable,
    Rays.Util,
    Rays.Types,
    Rays.Material,
    Rays.Random
  build-depends:    base >=4,
                    random,
                    linear,
                    lens,
                    mtl


executable rays
  main-is:          Main.hs
  ghc-options: -Wall -threaded -O2
  default-language: Haskell2010
  build-depends:    base >=4,
                    random,
                    linear,
                    lens,
                    rays,
                    mtl,
                    JuicyPixels
